fixed title on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,10 @@
   .year {
     margin-bottom: 2em;
   }
+  .pagetitle{
+    font-size: 2.5rem;
+  }
+  
 }
 
 .allcontainer{
